// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationForm component when login should render the correct form 1`] = `
<div
  className="login-window"
>
  <div
    className="l-head"
  >
    Log in to your Circle Account
  </div>
  <div
    className="l-form"
  >
    <form>
      <div
        className="form-group"
      >
        <label
          htmlFor="exampleInputEmail1"
        >
          Email
        </label>
        <input
          className="form-control"
          id="exampleInputEmail1"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="sample@gmail.com"
          type="email"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="exampleInputPassword1"
        >
          Password
        </label>
        <input
          className="form-control"
          id="exampleInputPassword1"
          onChange={[Function]}
          placeholder="**********"
          type="password"
          value=""
        />
      </div>
      <div
        className="checkbox"
      >
        <label>
          <label
            className="checkbox"
          >
            <input
              name="#"
              type="checkbox"
            />
            <span
              className="arrow"
            />
          </label>
           
          <span>
            Remember me on this computer
          </span>
          <span
            className="text2"
          >
            (not recommended on public or shared computers)
          </span>
        </label>
      </div>
      <div
        className="row"
      >
        <div>
          <div
            className="col-lg-7"
          >
            <button
              className="btn btn-cv1"
              disabled={true}
              onClick={[Function]}
              type="submit"
            >
              Login
            </button>
          </div>
          <div
            className="col-lg-1 ortext"
          >
            or
          </div>
          <div
            className="col-lg-4 signuptext"
          >
            <Link
              replace={false}
              to="/signup"
            >
              Sign Up
            </Link>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-12 forgottext"
        >
          <a
            href="/"
          >
            Forgot Username or Password?
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RegistrationForm component when signup should render the correct form if we want to signup 1`] = `
<div
  className="login-window"
>
  <div
    className="l-head"
  >
    Sign Up for Free
  </div>
  <div
    className="l-form"
  >
    <form>
      <div
        className="form-group"
      >
        <label
          htmlFor="exampleInputEmail1"
        >
          Email
        </label>
        <input
          className="form-control"
          id="exampleInputEmail1"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="sample@gmail.com"
          type="email"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label>
          Username
        </label>
        <input
          className="form-control"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="username"
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="exampleInputPassword1"
        >
          Password
        </label>
        <input
          className="form-control"
          id="exampleInputPassword1"
          onChange={[Function]}
          placeholder="**********"
          type="password"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="exampleInputPassword2"
        >
          Re-type Password
        </label>
        <input
          className="form-control"
          id="exampleInputPassword2"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="**********"
          type="password"
          value=""
        />
      </div>
      <div
        className="checkbox"
      >
        <label>
          <label
            className="checkbox"
          >
            <input
              name="#"
              type="checkbox"
            />
            <span
              className="arrow"
            />
          </label>
           
          <span>
            Remember me on this computer
          </span>
          <span
            className="text2"
          >
            (not recommended on public or shared computers)
          </span>
        </label>
      </div>
      <div
        className="row"
      >
        <div>
          <div
            className="col-lg-7"
          >
            <button
              className="btn btn-cv1"
              disabled={true}
              onClick={[Function]}
              type="submit"
            >
              Sign Up
            </button>
          </div>
          <div
            className="col-lg-1 ortext"
          >
            or
          </div>
          <div
            className="col-lg-4 signuptext"
          >
            <Link
              replace={false}
              to="/signin"
            >
              Login
            </Link>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-12 forgottext"
        >
          <a
            href="/"
          >
            By clicking "Sign Up" I agree to circle's Terms of Service.
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;
